# Remote_hive

./: .htaccess  PHP_WRAPPER_README.md  admin_clean.py  admin_routes.py  app.py  auth.py  backup.sh  check_dependencies.py  config.py  connect_ssh.py  create_test_users.py  deploy.sh  deploy_php_wrapper.bat  deploy_php_wrapper.ps1  deploy_php_wrapper.sh  deploy_to_hostinger.py  employer_routes.py  employer_routes_mongodb.py  forms.py  ftp_troubleshooter.py  gunicorn_config.py  hostinger_ssh_guide.md  index.php  jobseeker_routes.py  main.py  models.py  passenger_wsgi.py  pyproject.toml  remotehive.service  routes.py  seed_database.py  setup_and_run.py  test.php  test_ftp_connection.py  test_ftp_hostname.py  update_mongodb_atlas.py  wsgi.py
.github/workflows/: codeql.yml
admin/: __init__.py  run.py
deploy_package_20250505_022929/: README.md  hostinger_setup.md  passenger_wsgi.py  pyproject.toml  requirements.txt  web_scraper.py
deploy_package_20250505_022929/templates/admin/: dashboard.html  google_analytics_setup.html  import_export.html  job_scraper.html  manage_companies.html
deploy_package_20250505_022929/templates/employer/: post_job.html
deploy_package_20250505_022929/templates/jobseeker/: profile.html
deploy_package_20250505_023045/: .htaccess  jobseeker_routes.py  routes.py  wsgi.py
deploy_package_20250505_023045/deploy_package_20250505_022929/: app.py  employer_routes.py  (+1 more)
instance/: remotehive.db
static/: index.html
templates/: 500.html  base.html  index.html  job_feed.html  job_listing.html  login.html  register.html  shared_layout.html
(+44 files in other folders)
