[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "remote-hive"
version = "0.1.0"
description = "A remote job board application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "3.1.0"
flask-login = "0.6.3"
flask-wtf = "1.2.2"
werkzeug = "3.1.3"
wtforms = "3.2.1"
email-validator = "2.2.0"
gunicorn = "23.0.0"
pymongo = "3.12.0"
mongoengine = "0.24.0"
dnspython = "2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]
